cleaning and removing some warnings